# sleep-deprived-projects

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
gpa_calculator/: app.py  calculator.py
gpa_calculator/client/: app.py  components.py
gpa_calculator/server/: calculator.py  courses.py
scripts/: run-linters.sh  run-server.sh  run-tests.sh
tests/: test_calculator.py
