[tool.poetry]
name = "gpa-calculator"
version = "0.1.0"
description = ""
authors = ["se7en"]
readme = "README.md"
packages = [{include = "gpa_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 89

[tool.isort]
profile = "black"
line_length = 89
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
group_by_package = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
